// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryFilterChip Component (Diamond Standard) > should render active state correctly and match snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden border transition-all duration-300 rounded-full h-10 rounded-full items-stretch shrink-0 select-none cursor-pointer transition-all overflow-hidden relative h-10 flex bg-stone-900 text-white border-stone-900 shadow-md scale-102"
  >
    <div
      class="relative shrink-0 flex items-stretch z-10"
    >
      <span
        class="text-[0.5rem] leading-tight font-medium uppercase tracking-wider font-black w-9 h-full flex items-center justify-center shrink-0 transition-colors bg-white/20 text-white h-full !text-[10px] !font-black"
      >
        5
      </span>
    </div>
    <div
      class="py-0 text-[0.5rem] leading-tight font-medium uppercase tracking-wider font-black whitespace-nowrap flex items-center gap-1.5 px-3 flex-1 flex items-center pointer-events-none px-4 active:scale-95 transition-transform !text-[10px]"
    >
      <span
        class="text-white font-bold whitespace-nowrap"
      >
        Temizlik
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CategoryFilterChip Component (Diamond Standard) > should render inactive state correctly and match snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden border transition-all duration-300 rounded-full h-10 rounded-full items-stretch shrink-0 select-none cursor-pointer transition-all overflow-hidden relative h-10 flex bg-white text-stone-600 border-stone-200 hover:border-stone-400 active:scale-98"
  >
    <div
      class="relative shrink-0 flex items-stretch z-10"
    >
      <span
        class="text-[0.5rem] leading-tight font-medium uppercase tracking-wider font-black w-9 h-full flex items-center justify-center shrink-0 transition-colors bg-stone-50 text-stone-400 border-r border-stone-100 h-full !text-[10px] !font-black"
      >
        15
      </span>
    </div>
    <div
      class="py-0 text-[0.5rem] leading-tight font-medium uppercase tracking-wider font-black whitespace-nowrap flex items-center gap-1.5 px-3 flex-1 flex items-center pointer-events-none px-4 active:scale-95 transition-transform !text-[10px]"
    >
      <span
        class="text-stone-600 font-bold whitespace-nowrap"
      >
        Ambalaj
      </span>
    </div>
  </div>
</DocumentFragment>
`;
